Fixed issue where icons in user name were wrapping content

--- a/www/css/index.v2.css
+++ b/www/css/index.v2.css
@@ -8,3 +8,6 @@ div.tabs-content li {
 div.tabs-content li.is-active {
     display: block;
 }
+.icon-text {
+    width: max-content;
+}
